# fast.ai-course

./: .gitignore  pyproject.toml  road_to_top_3.py  scaling-up-road-to-the-top-part-3.ipynb
1.1/: is-it-a-bird-creating-a-model-from-your-own-data.py
