[tool.pyright]
# venvpath = "."
# pythonPath = ".venv/bin/python"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
  "pandas-stubs>=2.0.1.230501",
  "mypy>=1.3.0",
  # "itermplot @ git+https://github.com/znd4/itermplot@add-ipython-extension",
  "ipython>=8.13.2",
]

[project]
name = ""
version = ""
description = ""
authors = [{ name = "Zane Dufour", email = "znd4@pm.me" }]
dependencies = [
  "fastkaggle>=0.0.8",
  "fastai>=2.7.12",
  "pandas>=2.0.1",
  "duckduckgo-search>=2.9.4",
]
requires-python = ">=3.10"
license = { text = "MIT" }
