[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pandas-stubs>=2.0.1.230501",
    "mypy>=1.3.0",
    "itermplot @ git+https://github.com/znd4/itermplot@add-ipython-extension",
    "ipython>=8.13.2",
    "matplotlib>=3.7.1",
]

[project]
name = ""
version = ""
description = ""
authors = [{ name = "Zane Dufour", email = "zane@znd4.me" }]
dependencies = []
requires-python = ">=3.10"
license = { text = "MIT" }
